Update FilterInterceptor.java